loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:3: error: '(' expected but identifier found.
    for (i<- 1 to 5) {avance(); if estSurBiscuit() {biscuit+=1;}; };
                                   ^Poucet1:3: error: illegal start of simple expression
    for (i<- 1 to 5) {avance(); if estSurBiscuit() {biscuit+=1;}; };
                                                                ^